Fix autoconnection of accounts with always_dispatch=true

https://bugs.freedesktop.org/show_bug.cgi?id=91272